deployment/mongodb-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  selector:
    app: mongodb-replica-set-svc
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30017
  type: NodePort
